<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/patient_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/name_hint"
        android:inputType="text" />


    <EditText
        android:id="@+id/systolic_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/systolic_hint"
        android:inputType="number" />

    <EditText
        android:id="@+id/diastolic_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/diastolic_hint"
        android:inputType="number" />

    <Button
        android:id="@+id/diagnose_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/diagnose_button"
        android:layout_gravity="center_vertical|center_horizontal" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/category_heading"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/category_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/record_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/record_time"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/record_time_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/view_entries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="View Entries"
        android:layout_gravity="center_vertical|center_horizontal" />


</LinearLayout>
</ScrollView>
